Change Log for OpenXava project
===============================

- New smtpFromEmail property in xava.property to define a 'from' email different than smtpUserId.
- Lessons from 1 to 3 of the course use LocalDate instead of Date.
- New editor for PHOTO/IMAGE stereotype with AJAX uploading.	
- New methods changeImage(), removeImage(), assertImage() and assertNoImage() in ModuleTestBase.	
- New method isIE() in Browsers utility class.	
- Images of PHOTO stereotype are shown in tiny size in list mode.
- Fix: Broken image when PHOTO stereotype with no image is shown in list.  	
- Grouping by in list mode has a year and month entry for each LocalDate property.  
- Filtering by year, month and year/month in list mode for LocalDate columns.
- @ReadOnly(onCreate=false) in order the member would be editable on create and read only in the other cases.
- Fix: Some broken links in menu of the Spanish View chapter of reference guide.

OpenXava 6.1.2 (2019-6-17)
--------------------------
- Label aligned on top when editor height is greater than usual.
- Lessons 2 and 3 of course upgraded to OpenXava 6.
- Added documentation about overwriting go list action to reference guide (controllers chapter).
- Fix: On maximizing image in IMAGES_GALLERY the dialog does not fit the image size. 
- Fix: IJDBCCalculator for a @DefaultValueCalculator in a cascade remove collection element fails.
- Fix: @DefaultValueCalculator dependent on other properties does not work for references.
- Fix: Removing from a @ManyToMany deletes the element if it's also referenced from an aggregate collection.  
- Fix: LocalDate editor too long for a date.
- Fix: After generating a PDF the current entity is reloaded losing the changes if it has single key.
- Fix: Broken links in menus of the Spanish reference guide. 
- Fix: Single action with icon and no image is not shown in top button bar that is missing.
- Fix: View.setEditable(member, editable) does not work for references.