@@ -1,6 +1,7 @@
 Change Log for OpenXava project
 ===============================
 
+- The methods setHidden() and setEditable() of View accept qualified member names. 
 - New smtpFromEmail property in xava.property to define a 'from' email different than smtpUserId.
 - Lessons from 1 to 3 of the course use LocalDate instead of Date.
 - New editor for PHOTO/IMAGE stereotype with AJAX uploading.	
